force-app/main/default/objects/Lead/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adams</fullName>
            </value>
            <value>
                <fullName>Allegheny</fullName>
            </value>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Bedford</fullName>
            </value>
            <value>
                <fullName>Berks</fullName>
            </value>
            <value>
                <fullName>Blair</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Bucks</fullName>
            </value>
            <value>
                <fullName>Butler</fullName>
            </value>
            <value>
                <fullName>Cambria</fullName>
            </value>
            <value>
                <fullName>Cameron</fullName>
            </value>
            <value>
                <fullName>Carbon</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
            <value>
                <fullName>Chester</fullName>
            </value>
            <value>
                <fullName>Clarion</fullName>
            </value>
            <value>
                <fullName>Clearfield</fullName>
            </value>
            <value>
                <fullName>Clinton</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Crawford</fullName>
            </value>
            <value>
                <fullName>Cumberland</fullName>
            </value>
            <value>
                <fullName>Dauphin</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Erie</fullName>
            </value>
            <value>
                <fullName>Fayette</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>Franklin</fullName>
            </value>
            <value>
                <fullName>Fulton</fullName>
            </value>
            <value>
                <fullName>Greene</fullName>
            </value>
            <value>
                <fullName>Huntingdon</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>