force-app/main/default/objects/Lead/fields/pstar__County__c.field-meta.xml
<CustomField>
    <fullName>pstar__County__c</fullName>
    <label>County</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Adams</fullName><default>false</default><label>Adams</label></value>
            <value><fullName>Allegheny</fullName><default>false</default><label>Allegheny</label></value>
            <value><fullName>Armstrong</fullName><default>false</default><label>Armstrong</label></value>
            <value><fullName>Bedford</fullName><default>false</default><label>Bedford</label></value>
            <value><fullName>Berks</fullName><default>false</default><label>Berks</label></value>
            <value><fullName>Blair</fullName><default>false</default><label>Blair</label></value>
            <value><fullName>Bradford</fullName><default>false</default><label>Bradford</label></value>
            <value><fullName>Bucks</fullName><default>false</default><label>Bucks</label></value>
            <value><fullName>Butler</fullName><default>false</default><label>Butler</label></value>
            <value><fullName>Cambria</fullName><default>false</default><label>Cambria</label></value>
            <value><fullName>Cameron</fullName><default>false</default><label>Cameron</label></value>
            <value><fullName>Carbon</fullName><default>false</default><label>Carbon</label></value>
            <value><fullName>Centre</fullName><default>false</default><label>Centre</label></value>
            <value><fullName>Chester</fullName><default>false</default><label>Chester</label></value>
            <value><fullName>Clarion</fullName><default>false</default><label>Clarion</label></value>
            <value><fullName>Clearfield</fullName><default>false</default><label>Clearfield</label></value>
            <value><fullName>Clinton</fullName><default>false</default><label>Clinton</label></value>
            <value><fullName>Columbia</fullName><default>false</default><label>Columbia</label></value>
            <value><fullName>Crawford</fullName><default>false</default><label>Crawford</label></value>
            <value><fullName>Cumberland</fullName><default>false</default><label>Cumberland</label></value>
            <value><fullName>Dauphin</fullName><default>false</default><label>Dauphin</label></value>
            <value><fullName>Delaware</fullName><default>false</default><label>Delaware</label></value>
            <value><fullName>Erie</fullName><default>false</default><label>Erie</label></value>
            <value><fullName>Fayette</fullName><default>false</default><label>Fayette</label></value>
            <value><fullName>Forest</fullName><default>false</default><label>Forest</label></value>
            <value><fullName>Franklin</fullName><default>false</default><label>Franklin</label></value>
            <value><fullName>Fulton</fullName><default>false</default><label>Fulton</label></value>
            <value><fullName>Greene</fullName><default>false</default><label>Greene</label></value>
            <value><fullName>Huntingdon</fullName><default>false</default><label>Huntingdon</label></value>
            <value><fullName>Indiana</fullName><default>false</default><label>Indiana</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>