force-app/main/default/objects/Lead/fields/pstar__Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>pstar__Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>