force-app/main/default/objects/Lead/fields/pstar__Peers_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>pstar__Peers_Phone_Number__c</fullName>
    <label>Peers Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>