force-app/main/default/objects/Lead/fields/pstar__Referring_Persons_Email__c.field-meta.xml
<CustomField>
    <fullName>pstar__Referring_Persons_Email__c</fullName>
    <label>Referring Persons Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>