force-app/main/default/objects/Lead/fields/Referring_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Referring_Person_Name__c</fullName>
    <label>Referring Persons Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>