force-app/main/default/objects/Lead/fields/Referring_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referring_Person_Phone__c</fullName>
    <label>Referring Persons Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>