force-app/main/default/objects/Lead/listViews/Assigned_Leads.listView-meta.xml
<ListView>
    <fullName>Assigned_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Referring_Person_Name__c</columns>
    <columns>Referring_Person_Phone__c</columns>
    <columns>Relationship_to_Peer__c</columns>
    <columns>Peers_Phone_Number__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Working - Contacted</value>
    </filters>
    <label>Assigned Leads</label>
</ListView>